tests/ui/const-generics/mgca/type_const-on-generic-expr.stderr
error: generic parameters may not be used in const operations
  --> $DIR/type_const-on-generic-expr.rs:5:53
   |
LL | const FREE1<T>: usize = const { std::mem::size_of::<T>() };
   |                                                     ^

error: generic parameters may not be used in const operations
  --> $DIR/type_const-on-generic-expr.rs:8:46
   |
LL | const FREE2<const I: usize>: usize = const { I + 1 };
   |                                              ^

error: aborting due to 2 previous errors

